--- a/templates/default/static/styles/jsdoc-default.css
+++ b/templates/default/static/styles/jsdoc-default.css
@@ -1,8 +1,9 @@
 body
 {
-	font: 14px "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans serif;
+	font: 12px "Calibri", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans serif;
 	line-height: 130%;
 	color: #000;
+	background: #f4f4f4;
 }
 
 a {
@@ -24,10 +25,9 @@ header
 }
 
 .class-description {
-    font-style: italic;
-	font-family: Palatino, 'Palatino Linotype', serif;
 	font-size: 130%;
 	line-height: 140%;
+	border-top: solid 1px #AAA;
 }
 
 #main {
@@ -43,6 +43,12 @@ section
 	padding: 12px 24px;
     border-bottom: 1px solid #ccc;
     margin-right: 240px;
+	
+	border-radius: 10px;
+	border: solid 1px #EEE;
+	box-shadow: 0 10px 10px #ddd;
+
+	margin-top: 26px;	
 }
 
 .variation {
@@ -87,6 +93,12 @@ nav li {
 
 nav a {
     color: #5C5954;
+	text-decoration: none;
+	padding: 3px 5px 3px 20px;	
+}
+
+nav a:hover {
+    color: #A35A00;
 }
 
 nav a:visited {
@@ -107,18 +119,19 @@ footer {
 
 h1
 {
-	font-size: 200%;
+	/*font-size: 200%;
 	font-weight: bold;
 	letter-spacing: -0.01em;
-	margin: 6px 0 9px 0;
+	margin: 6px 0 9px 0;*/
+	display: none;
 }
 
 h2
 {
-	font-size: 170%;
+	font-size: 250%;
 	font-weight: bold;
 	letter-spacing: -0.01em;
-	margin: 6px 0 3px 0;
+	margin: 12px 0 3px 0;
 }
 
 h3
@@ -132,7 +145,7 @@ h3
 
 h4
 {
-	font-size: 130%;
+	font-size: 170%;
 	font-weight: bold;
 	letter-spacing: -0.01em;
 	margin-top: 16px;
@@ -145,7 +158,9 @@ h5, .container-overview .subsection-title
 	font-size: 120%;
 	font-weight: bold;
 	letter-spacing: -0.01em;
-	margin: 8px 0 3px -16px;
+	margin: 10px 0 5px -16px;
+	padding-left: 5px;
+	border-left: solid 4px #CCC;
 }
 
 h6
@@ -181,14 +196,22 @@ h6
 	font-family: Consolas, "Lucida Console", Monaco, monospace;
 }
 
-.details { margin-top: 14px; }
+.details { 
+	margin-top: 14px; 
+	font-size: 80%;
+	color: #999;	
+}
 .details dt { width:100px; float:left; border-left: 2px solid #DDD; padding-left: 10px;  padding-top: 6px; }
 .details dd { margin-left: 50px; }
 .details ul { margin: 0; }
 .details ul { list-style-type: none; }
 .details li { margin-left: 30px; padding-top: 6px; }
 
-.description { margin-left: -16px; }
+.description { 
+	margin-left: -16px; 
+	font-size: 14px;
+	color: #666;	
+}
 
 .code-caption
 {
